--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,7 @@ $success: #a39191;
 
 //Fonts
 @import url("https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Comfortaa:wght@300;400&family=Raleway:wght@100;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Comfortaa:wght@300;400&family=Playfair+Display&family=Raleway:wght@100;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@100;400&display=swap");
 
 .brand-name {
