adding html and style

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -107,3 +107,29 @@ body {
   opacity: 0.5;
   z-index: -1;
 }
+
+// Contact //
+
+.contact-bg {
+  position: relative;
+  height: 700px;
+}
+
+.contact-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url(/images/contact.background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.5;
+  z-index: -1;
+}
+
+.margin-unset {
+  margin: unset;
+}
