--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,12 +8,9 @@ $success: #a39191;
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 //Fonts
-@import url("https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Comfortaa:wght@300;400&family=Raleway:wght@100;400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Comfortaa:wght@300;400&family=Playfair+Display&family=Raleway:wght@100;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Comfortaa:wght@300;400&family=Hedvig+Letters+Sans&family=Playfair+Display:ital@0;1&family=Raleway:wght@100;400&family=Red+Rose:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@100;400&display=swap");
 
-// .gradient-bg {
-// }
 .brand-name {
   font-family: "Playfair Display", serif;
 }
