--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,7 +16,7 @@ $success: #a39191;
 }
 
 body {
-  font-family: "ADLaM Display", cursive, "Raleway", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 //navigation
