--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -143,3 +143,25 @@ body {
   font-style: oblique;
   color: #000000;
 }
+
+//Auction-Specific //
+
+.masthead-auction {
+  position: relative;
+  // height: 500px;
+}
+
+.masthead-auction::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url(/images/Masthead.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.5;
+  z-index: -1;
+}
