--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,10 @@ $success: #a39191;
   font-family: "Playfair Display", serif;
 }
 
+.sortAuctions {
+  font-size: 100px;
+}
+
 body {
   font-family: "Raleway", sans-serif;
 }
