--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,9 +18,10 @@ $success: #a39191;
 .sortAuctions {
   border-style: solid;
   border-color: #d4af37;
-  font-size: 22px;
+  font-size: 25px;
   font-weight: bolder;
   padding: 10px;
+  border-radius: 5px;
 }
 
 .sortAuctions option {
@@ -182,4 +183,12 @@ body {
   background-position: center;
   opacity: 0.5;
   z-index: -1;
+}
+
+// ALl auctions //
+
+.allAuctionMedia {
+  height: 200px;
+  width: 250px;
+  object-fit: cover;
 }
