--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -34,6 +34,11 @@ $success: #a39191;
   border-color: #d4af37;
 }
 
+.sortAuctions:focus {
+  border-style: solid;
+  border-color: #d4af37;
+}
+
 body {
   font-family: "Raleway", sans-serif;
 }
