--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -165,6 +165,7 @@ body {
   bottom: 0;
   left: 0;
   background-image: url(/images/Masthead.jpg);
+  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -238,4 +239,13 @@ body {
   border-style: solid;
   border-color: #d4af37;
   outline: none;
+}
+
+.allAuctions {
+  background-image: url(/images/profilebanner.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 1000px;
 }
