writing readMe file

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -245,6 +245,7 @@ body {
   font-weight: bolder;
   padding: 10px;
   border-radius: 5px;
+  background-color: #000000;
 }
 
 .sortAuctions option {
@@ -261,6 +262,7 @@ body {
   border-style: solid;
   border-color: #d4af37;
   outline: none;
+  background-color: #000000;
 }
 
 .allAuctions {
