--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -271,3 +271,8 @@ body {
   background-size: cover;
   min-height: 1000px;
 }
+
+.modal-background {
+  background-image: url(/images/modalBG2.jpg);
+  background-position: center;
+}
