--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -45,7 +45,7 @@ body {
   margin-bottom: 10px;
 }
 
-//Loginbox
+// Login //
 .masthead {
   position: relative;
   height: 500px;
@@ -145,11 +145,10 @@ body {
   color: #000000;
 }
 
-//Auction-Specific //
+// Auction-Specific //
 
 .masthead-auction {
   position: relative;
-  // height: 500px;
 }
 
 .masthead-auction::before {
